--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mongoose": "^7.6.2",
     "nodemon": "^3.0.1",
     "socket.io": "^4.7.2"
   }
