--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.3",
     "socket.io-client": "^4.7.2",
     "vite-plugin-mkcert": "^1.16.0"
   },
