--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,9 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "tunnel": "vk-tunnel --insecure=1 --http-protocol=https --ws-protocol=wss --host=0.0.0.0 --port=5173 endpoints=[web]"
+    "tunnel": "vk-tunnel --insecure=1 --http-protocol=https --ws-protocol=wss --host=0.0.0.0 --port=5173 endpoints=[web]",
+    "deploy": "vk-miniapps-deploy",
+    "clean-source": "rimraf README.md src webroot package.json"
   },
   "dependencies": {
     "@happysanta/router": "^0.3.1",
@@ -16,6 +18,7 @@
     "@reduxjs/toolkit": "^1.9.7",
     "@vkontakte/icons": "^2.71.0",
     "@vkontakte/vk-bridge": "^2.11.2",
+    "@vkontakte/vk-miniapps-deploy": "^0.1.6",
     "@vkontakte/vkui": "^5.9.2",
     "axios": "^1.5.1",
     "framer-motion": "^10.16.4",
