--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@ dist-ssr
 *.local
 server/deposit/config.py
 server/deposit/.venv
+/client/build.zip
+/client/dist
+/client/build
 
 # Editor directories and files
 .vscode/*
