--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "server": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "set NODE_ENV=DEV&&nodemon index.js",
+    "prod": "set NODE_ENV=PROD&&nodemon index.js"
   },
   "author": "",
   "license": "ISC",
