--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^7.6.2",
+    "mongoose-long": "^0.7.1",
     "nodemon": "^3.0.1",
     "socket.io": "^4.7.2",
     "winston": "^3.11.0"
