--- a/client/package.json
+++ b/client/package.json
@@ -21,9 +21,11 @@
     "axios": "^1.5.1",
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
+    "react-confetti": "^6.1.0",
     "react-custom-roulette": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
+    "react-snowfall": "^1.2.1",
     "socket.io-client": "^4.7.2",
     "vite-plugin-mkcert": "^1.16.0"
   },
